<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg"
              android:orientation="vertical">



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

            <HorizontalScrollView android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:id="@+id/scroll"
                                  android:scrollbars="none"
            >

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:id="@+id/resultEquation"
                        android:singleLine="true"
                        android:textSize="35sp"
                        android:gravity="end"
                        android:textAlignment="textEnd"
                        android:cursorVisible="false"
                        android:inputType="none"
                        android:paddingTop="20dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:background="@null"
                />

            </HorizontalScrollView>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="1">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:id="@+id/midResultEquation"
                    android:singleLine="true"
                    android:textSize="30sp"
                    android:gravity="end"
                    android:textAlignment="textEnd"
                    android:cursorVisible="false"
                    android:inputType="none"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:background="@null"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/buttonClearEverything"
                    android:text="@string/buttonClearEverything"
                    style="@style/UtilsButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonLeftPar"
                    android:text="@string/leftPar"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonRightPar"
                    android:text="@string/rightPar"
                    style="@style/NumberButtonStyle"
            />

            <ImageView
                    android:id="@+id/buttonClear"
                    android:src="@drawable/backspace"
                    android:scaleType="center"
                    style="@style/UtilsButtonStyle"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/buttonSeven"
                    android:text="@string/seven"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonEight"
                    android:text="@string/eight"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonNine"
                    android:text="@string/nine"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonDivide"
                    android:text="@string/divide"
                    style="@style/FunctionButtonStyle"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/buttonFour"
                    android:text="@string/four"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonFive"
                    android:text="@string/five"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonSix"
                    android:text="@string/six"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonMultiply"
                    android:text="@string/multiply"
                    style="@style/FunctionButtonStyle"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/buttonOne"
                    android:text="@string/one"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonTwo"
                    android:text="@string/two"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonThree"
                    android:text="@string/three"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonMinus"
                    android:text="@string/substrain"
                    style="@style/FunctionButtonStyle"
            />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/buttonZero"
                    android:text="@string/zero"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonPoint"
                    android:text="@string/buttonPoint"
                    style="@style/NumberButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonEquals"
                    android:text="@string/equals"
                    style="@style/UtilsButtonStyle"
            />

            <TextView
                    android:id="@+id/buttonAdd"
                    android:text="@string/add"
                    style="@style/FunctionButtonStyle"

            />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>